--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 .body{
+	padding-top: 150px;
 	text-decoration: none;
     width: 100%;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
+
 }
+
 .row>h1{
 	text-align: center;
 }
@@ -25,11 +28,12 @@
 .navbar{
 	float: right;
     border-radius: 0;
-    background-color: rgba(0,0,0,0.1) !important;
+    background-color: rgba(0,0,0,0.3) !important;
 	padding-left: 5%;
 	padding-right: 5%;
     align-items: baseline;
     color: white;
+	margin-bottom: 50px; 
 }
 .navbar-brand {
 	color: rgba(0, 255, 255, 1) !important;
@@ -40,47 +44,53 @@
 .navbar a{
 	letter-spacing: 0.1em;
 	color: white !important;
-	font-size: 1em ;
+	font-size: 1.2em ;
 }
 
 .navbar a:hover{
-	background-color: rgba(0,0,0,1) !important;
+	background-color: rgba(0,0,0,0.5) !important;
 }
 .navbar button{
     margin-right: 20px;
 }
 
 /*jumbotron*/
+
+
 .jumbotron{
-	background:url("../assets/img/backCoverImg.jpg") no-repeat;
+	background:url("../assets/img/sea.jpg") fixed no-repeat;
 	background-size: cover;
 	background-position: center;
 	width: 100%;
 }
+
 .jumboBox{
+	text-shadow: 2px 2px #000; 
 	text-align: right;
-	padding: 200px;
     color: white;
-    background-color: rgba(0,0,0,0.2);
-    height: 600px;
-    max-width: 80%;
+    background-color: rgba(0,0,0,0);
+    padding: 50px;
+    padding-top: 200px;
+    margin-bottom: 20px;
+	height: 500px;
+}
+.coverPortrait{
+	text-align: left;
+	margin-top: 100px;
+}
+.coverPortrait img{
+	width: 100%;
+	border: 2px white solid;
 }
 .jumboBox h1{
-	/*font-family: 'Abril Fatface', serif;*/
-}
-.jumboBox h3, .jumboBox h2, .jumboBox h4,{
-	margin-right: 70px;
+	font-family: 'Abril Fatface', serif;
 }
 
-.socialMediaIcons img{
-
-}
 /*Divider - Read, Watch, Listen*/
 
 .spacerOne{
 	font-family: 'Abril Fatface', serif;
-	font-size: 2em;
-	max-height: 60px;
+	font-size: 2.5em;
 	text-align: center;
 	background-color: rgba(75,75,75, 1);
 
@@ -98,15 +108,21 @@
 }
 /*Big Quote*/
 .quote{
-	display: flex;
 	text-align: center;
 	font-family: 'Abril Fatface';
-	height: 100px;
-	align-items: center;
+}
+
+/*Books section*/
+#books{
+	background-color: rgba(75,75,75, 1);
 }
 
 /*Modals for reading poetry text*/
 
+.modal-body{
+    height: 300px;
+    overflow-y: auto;
+}
 .modal-title{
 	font-size: 2em;
 	font-weight: bold;
@@ -119,26 +135,43 @@
 .modal-footer{
 	display: flex;
 }
+.modal-header img{
+	max-height: 150px;
+}
+
 /* About section*/
 .about{
-	padding-right: 10%;
-	text-align: left;
-	color: white;
 	background-color: rgba(75,75,75, 1);
 }
 .about img{
-	text-align: center;
 	max-height:300px; 
-	
+	max-width: 400px;
+}
+.aboutImgWrapper{
+	text-align: center;
+}
+.aboutText{
+	padding-top: 20px;
+	color: white;
 }
 /*Interviews section*/
+.interviews{
+	background-color: rgba(75,75,75, 1);
+	color: white;
+}
 .interview{
+	color: black;
 	margin: 10px;
 	padding: 10px;
 	border: 1px solid #ddd;
 	border-radius: 20px;
 	font-size: 0.9em;
 	min-height: 300px;
+	background-color: white;
+}
+.interview:hover{
+	
+	background-color: #f5f5dc;
 }
 /*Multimedia section*/
 .audio, .video{
@@ -147,14 +180,13 @@
 
 /*Tilter Book covers*/
 
-
 .tilter {
 
 	position: relative;
 	display: block;
 	flex: none;
-	width: 150px;
-	height: 208px;
+	width: 225px;
+	height: 316px;
 	margin: 1.5em 2.5em;
 	color: #fff;
 	perspective: 1000px;
